<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9DDBEA"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewPlayground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewPlayground"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonDont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#971919"
            android:text="@string/buttonDont" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:weightSum="10">

        <Switch
            android:id="@+id/switchYesNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:minHeight="48dp"
            android:text="@string/switchYesNo" />

        <CheckBox
            android:id="@+id/checkBoxUhHuh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/checkBoxuhhuh"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10">

        <RadioGroup
            android:id="@+id/radioGroupOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:minHeight="45dp">


            <RadioButton
                android:id="@+id/radioButtonA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="20dp"
                android:text="@string/radioButtonA" />

            <RadioButton
                android:id="@+id/radioButtonB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonB" />

            <RadioButton
                android:id="@+id/radioButtonC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonC" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="201dp"
            android:layout_height="200dp"
            android:layout_weight="5"
            android:contentDescription="@string/pop_fly_away_logo"
            app:srcCompat="@drawable/pop_fly_away_etsy_icon_08" />

        <CalendarView
            android:id="@+id/calendarView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:scaleX=".85"
            android:scaleY=".85" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBarLoad"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#244C48"
            android:max="100"
            android:progress="40" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SearchView
            android:id="@+id/searchBarSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:inputType="textShortMessage|text" />
    </TableRow>
</TableLayout>